--- a/frontend/src/components/schedule/ClassCard.module.css
+++ b/frontend/src/components/schedule/ClassCard.module.css
@@ -14,6 +14,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
   gap: 14px;
   padding: 7px;
 }
@@ -72,6 +73,7 @@
   mix-blend-mode: color-dodge;
   overflow: hidden;
   height: 0px;
+  width: 100%;
   transform: scale(0.8);
   opacity: 0;
   margin-top: 0px;
